--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "dotenv": "^16.5.0",
-    "stellar-sdk": "^8.2.3",
+    "axios": "^1.8.4",
     "bip39": "^3.1.0",
+    "dotenv": "^16.5.0",
     "ed25519-hd-key": "^1.3.0",
-    "axios": "^1.8.4"
+    "readline": "^1.3.0",
+    "sodium-native": "^5.0.3",
+    "stellar-sdk": "^8.2.3"
   }
 }
